--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -68,6 +68,7 @@ dev_dependencies:
   cookie_jar: ^4.0.8
   dio_cookie_manager: ^3.1.1
   intl: ^0.19.0
+  shared_preferences: ^2.0.15
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
