--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -69,6 +69,7 @@ dev_dependencies:
   dio_cookie_manager: ^3.1.1
   intl: ^0.19.0
   shared_preferences: ^2.0.15
+  flutter_markdown: ^0.6.14
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
