--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -70,7 +70,7 @@ dev_dependencies:
   intl: ^0.19.0
   shared_preferences: ^2.0.15
   flutter_markdown: ^0.6.14
-
+  path: ^1.8.3
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
