--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -70,6 +70,7 @@ dev_dependencies:
   intl: ^0.19.0
   shared_preferences: ^2.0.15
   flutter_markdown: ^0.6.14
+  flutter_dotenv: ^5.1.0
   path: ^1.8.3
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -90,6 +91,7 @@ flutter:
   # An image asset can refer to one or more resolution-specific "variants", see
   assets:
      - assets/images/
+     - .env
   # https://flutter.dev/to/resolution-aware-images
 
   # For details regarding adding assets from package dependencies, see
