--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 # .env file
 
 # Variable untuk semua environment
-BASE_API_URL='http://localhost:5500'
-API_USER_URL='http://localhost:5500'
+BASE_API_URL='http://165.22.102.172:6500'
+API_USER_URL='http://165.22.102.172:6500'
 # Variable spesifik untuk development
-API_KEY_DEV='http://localhost:5500'
+API_KEY_DEV='http://165.22.102.172:6500'
