Bug and Revision I : Dashboard

--- a/.env
+++ b/.env
@@ -2,6 +2,7 @@
 
 # Variable untuk semua environment
 BASE_API_URL='http://165.22.102.172:6500'
-API_USER_URL='http://165.22.102.172:6500'
+#API_USER_URL='http://165.22.102.172:6500'
+API_USER_URL='http://localhost:6500'
 # Variable spesifik untuk development
 API_KEY_DEV='http://165.22.102.172:6500'
