--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,8 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
+  flutter_launcher_icons: "^0.13.1"
+  
   flutter_lints: ^4.0.0
 
   supabase_flutter: ^2.0.0
@@ -116,3 +118,15 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/to/font-from-package
+
+flutter_launcher_icons:
+  # Path menuju file ikon Anda (misalnya, di folder assets/images/)
+  image_path: "assets/images/Balansing-Logo.png" 
+  
+  # Platform yang ingin diubah ikonnya
+  android: true
+  ios: true
+  
+  # Opsi khusus Android (Opsional)
+  # Jika Anda ingin mendukung Adaptive Icons di Android 8.0+
+  adaptive_icon_background: "#FFFFFF" # Warna atau path ke gambar background
