--- a/.env
+++ b/.env
@@ -1,8 +1,10 @@
 # .env file
 
-# Variable untuk semua environment
-BASE_API_URL='http://165.22.102.172:6500'
-#API_USER_URL='http://165.22.102.172:6500'
+# BASE_API_URL='http://174.138.21.196:6500'
+# API_USER_URL='http://174.138.21.196:6500'
+# API_KEY_DEV='http://174.138.21.196:6500'
+
+# # Variable untuk semua environment
+BASE_API_URL='http://localhost:6500'
 API_USER_URL='http://localhost:6500'
-# Variable spesifik untuk development
-API_KEY_DEV='http://165.22.102.172:6500'
+API_KEY_DEV='http://localhost:6500'
